<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#E1DFDF">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <View
            android:id="@+id/v_item_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:background="#c0c0c0"
            app:layout_constraintBottom_toTopOf="@+id/tv_item_stock"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_unit_price" />

        <TextView
            android:id="@+id/tv_dpe_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:text="@string/item_name_txt"
            android:textSize="18sp"
            app:fontFamily="sans-serif-black"
            app:layout_constraintBottom_toTopOf="@+id/iv_item_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_item_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_item_sub"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_dpe_item_name"
            app:srcCompat="@drawable/item_sample_img" />

        <TextView
            android:id="@+id/tv_item_sub"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="3dp"
            android:text="@string/item_sub_txt"
            android:textColor="#000000"
            android:textSize="18sp"
            app:fontFamily="sans-serif-condensed-medium"
            app:layout_constraintBottom_toTopOf="@+id/tv_item_unit_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_item_img" />

        <TextView
            android:id="@+id/tv_item_unit_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="3dp"
            android:text="@string/item_unit_price_txt"
            android:textColor="#000000"
            android:textSize="24sp"
            app:fontFamily="sans-serif-condensed-medium"
            app:layout_constraintBottom_toTopOf="@+id/v_item_line"
            app:layout_constraintEnd_toStartOf="@+id/tv_item_unit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_item_sub" />

        <TextView
            android:id="@+id/tv_item_unit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="right"
            android:text="@string/item_unit_txt"
            android:textSize="18sp"
            app:fontFamily="sans-serif-condensed-medium"
            app:layout_constraintBottom_toBottomOf="@+id/tv_item_unit_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_item_unit_price"
            app:layout_constraintTop_toTopOf="@+id/tv_item_unit_price" />

        <TextView
            android:id="@+id/tv_item_stock"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="3dp"
            android:gravity="right"
            android:text="@string/item_stock_txt"
            android:textSize="18sp"
            app:fontFamily="sans-serif-condensed-medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/v_item_line" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>